Enhance API
